--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,13 @@
-#cassandra:
-
-
 eureka:
   client:
     fetchRegistry: false
     registerWithEureka: true
     serviceUrl:
       defaultZone: http://eureka-peer-1:8801/eureka/,http://eureka-peer-2:8802/eureka/
+
+cassandra:
+  contact-points: localhost
+  keyspace-name: ocds
+  port: 9042
+  username:
+  password:
