--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
             <artifactId>cassandra-driver-mapping</artifactId>
             <version>${cassandra-driver.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-transport-native-epoll</artifactId>
+            <version>${netty.version}</version>
+            <classifier>linux-x86_64</classifier>
+            <scope>runtime</scope>
+        </dependency>
 
         <!--Kotlin-->
         <dependency>
