--- a/pom.xml
+++ b/pom.xml
@@ -18,30 +18,46 @@
     </parent>
 
     <properties>
+        <!--Project-->
         <final-artifact-name>${project.artifactId}-${project.version}</final-artifact-name>
-        <docker-registry>docker-registry.eprocurement.systems</docker-registry>
         <project.service.port>8080</project.service.port>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
 
+        <!--Kotlin-->
         <kotlin.version>1.2.10</kotlin.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
 
-        <cassandra-driver.version>3.3.0</cassandra-driver.version>
+        <!--Docker-->
+        <docker-registry>docker-registry.eprocurement.systems</docker-registry>
         <docker-image-profile></docker-image-profile>
-        <docker-maven-plugin.version>0.23.0</docker-maven-plugin.version>
+        <docker-maven-plugin.version>0.24.0</docker-maven-plugin.version>
+
+        <!--Spring-->
+        <spring-cloud.version>Finchley.M5</spring-cloud.version>
+
+        <!--Loggin-->
+        <logstash.logback.encoder.version>4.11</logstash.logback.encoder.version>
+
+        <!--Libs-->
         <java-jwt.version>3.2.0</java-jwt.version>
+        <jetbrains-annotations.version>16.0.1</jetbrains-annotations.version>
+
+        <!--Database-->
+        <cassandra-driver.version>3.3.0</cassandra-driver.version>
+
+        <!--Test-->
         <junit-jupiter.version>5.0.0</junit-jupiter.version>
         <junit-platform.version>1.0.0</junit-platform.version>
-        <logstash.logback.encoder.version>4.11</logstash.logback.encoder.version>
+        <mockito-kotlin.version>1.5.0</mockito-kotlin.version>
+        <mockito.version>2.13.0</mockito.version>
+        <testcontainers.version>1.4.3</testcontainers.version>
+
+        <!--Plugins-->
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>2.19</maven-surefire-plugin.version>
         <maven-failsafe-plugin.version>2.19</maven-failsafe-plugin.version>
-        <mockito-kotlin.version>1.5.0</mockito-kotlin.version>
-        <mockito.version>2.13.0</mockito.version>
-        <spring-cloud.version>Finchley.M5</spring-cloud.version>
-        <testcontainers.version>1.4.3</testcontainers.version>
     </properties>
 
     <dependencyManagement>
@@ -224,28 +240,7 @@
         </resources>
 
         <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit-platform.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>${junit-jupiter.version}</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-
+            <!--Kotlin compiler-->
             <plugin>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <groupId>org.jetbrains.kotlin</groupId>
@@ -303,12 +298,38 @@
                 </executions>
             </plugin>
 
+            <!--Compiler-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
             </plugin>
 
+            <!--Spring Boot-->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <!--Unit Test (Surefire)-->
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>${junit-platform.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>${junit-jupiter.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
+            <!--Build Docker Image (fabric8)-->
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
@@ -329,7 +350,6 @@
                     </images>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 
