--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.procurement</groupId>
-    <artifactId>e-operation</artifactId>
+    <artifactId>operation</artifactId>
     <version>17.12.1</version>
     <packaging>jar</packaging>
 
-    <name>e-operation</name>
+    <name>operation</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
