Added docker-image-profile "-swarm"

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 
         <!--Docker-->
         <docker-registry>dev.docker-registry.eprocurement.systems</docker-registry>
-        <docker-image-profile></docker-image-profile>
+        <docker-image-profile>-swarm</docker-image-profile>
         <docker-maven-plugin.version>0.24.0</docker-maven-plugin.version>
 
         <!--Spring-->
