--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 
         <!--Docker-->
         <docker-registry>dev.docker-registry.eprocurement.systems</docker-registry>
+        <!--<docker-registry>docker.io/eprocurementsystems</docker-registry>-->
         <docker-image-profile>-swarm</docker-image-profile>
         <docker-maven-plugin.version>0.24.0</docker-maven-plugin.version>
 
